--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reservar Espacio en Coworking</title>
-  <!-- Agregamos Bootstrap desde CDN para estilos básicos -->
+  <title>Reservar Spot en Coworking</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <style>
+    /* Estilos simples para marcar disponibilidad */
+    .spot-available {
+      background-color: #d4edda; /* Verde claro */
+      color: #155724;
+      padding: 5px;
+      margin: 2px;
+      border-radius: 4px;
+    }
+    .spot-reserved {
+      background-color: #f8d7da; /* Rojo claro */
+      color: #721c24;
+      padding: 5px;
+      margin: 2px;
+      border-radius: 4px;
+    }
+  </style>
 </head>
 <body>
   <div class="container mt-4">
-    <h1>Reservar Espacio en el Coworking</h1>
+    <h1>Reserva tu Spot</h1>
     <form id="reservationForm">
       <div class="mb-3">
         <label for="user" class="form-label">Nombre</label>
         <input type="text" class="form-control" id="user" placeholder="Ingresa tu nombre" required>
       </div>
       <div class="mb-3">
-        <label for="space" class="form-label">Espacio</label>
+        <label for="space" class="form-label">Spot</label>
         <select id="space" class="form-select">
-          <option value="1">Sala 1</option>
-          <option value="2">Sala 2</option>
+          <option value="1">Spot 1</option>
+          <option value="2">Spot 2</option>
+          <option value="3">Spot 3</option>
+          <option value="4">Spot 4</option>
+          <option value="5">Spot 5</option>
+          <option value="6">Spot 6</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label for="turn" class="form-label">Turno</label>
+        <select id="turn" class="form-select">
+          <option value="mañana">Mañana</option>
+          <option value="tarde">Tarde</option>
         </select>
       </div>
       <div class="mb-3">
@@ -29,22 +56,26 @@
       <button type="submit" class="btn btn-primary">Reservar</button>
     </form>
     <div id="message" class="mt-3"></div>
+
+    <!-- Sección para mostrar la disponibilidad -->
+    <h2 class="mt-5">Disponibilidad para el día seleccionado</h2>
+    <div id="availability"></div>
   </div>
   
   <script>
+    // Maneja el envío del formulario de reserva
     document.getElementById('reservationForm').addEventListener('submit', function(e) {
       e.preventDefault();
       
       const user = document.getElementById('user').value;
       const spaceId = document.getElementById('space').value;
+      const turn = document.getElementById('turn').value;
       const date = document.getElementById('date').value;
 
       fetch('/api/reservations', {
         method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ user, spaceId, date })
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ user, spaceId, turn, date })
       })
       .then(response => response.json())
       .then(data => {
@@ -53,12 +84,45 @@
           messageDiv.innerHTML = `<div class="alert alert-danger">${data.error}</div>`;
         } else {
           messageDiv.innerHTML = `<div class="alert alert-success">${data.message}</div>`;
+          // Actualiza la disponibilidad tras la reserva
+          updateAvailability();
         }
       })
-      .catch(error => {
-        console.error('Error:', error);
-      });
+      .catch(error => console.error('Error:', error));
     });
+
+    // Función para actualizar la disponibilidad según el día seleccionado
+    function updateAvailability() {
+      const date = document.getElementById('date').value;
+      if (!date) return;
+      
+      // Llama al endpoint para obtener las reservas de ese día
+      fetch(`/api/reservations/bydate?date=${date}`)
+        .then(response => response.json())
+        .then(data => {
+          // Creamos una estructura para marcar la disponibilidad para cada turno y spot
+          const turns = ['mañana', 'tarde'];
+          let html = '';
+          turns.forEach(turn => {
+            html += `<h3>Turno ${turn}</h3><div class="d-flex flex-wrap">`;
+            for (let spot = 1; spot <= 6; spot++) {
+              // Verifica si hay alguna reserva para ese spot y turno
+              const reserved = data.some(r => r.spaceId == spot && r.turn === turn);
+              if (reserved) {
+                html += `<div class="spot-reserved m-2">Spot ${spot}</div>`;
+              } else {
+                html += `<div class="spot-available m-2">Spot ${spot}</div>`;
+              }
+            }
+            html += `</div>`;
+          });
+          document.getElementById('availability').innerHTML = html;
+        })
+        .catch(error => console.error('Error al obtener disponibilidad:', error));
+    }
+
+    // Actualiza la disponibilidad cuando se cambie la fecha
+    document.getElementById('date').addEventListener('change', updateAvailability);
   </script>
 </body>
 </html>
